<resources>
    <string name="app_name">FCR Trainer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="default_user_name">Yo</string>

    <string name="menu_ejercicio1">Ejercicio1</string>
    <string name="menu_ejercicio2">Ejercicio2</string>
    <string name="menu_ejercicioN">EjercicioN</string>
    <string name="menu_ejercicioCircuitosDigitales">Ejercicio Circuitos Digitales</string>
    <string name="menu_puntuacioneslocales">Puntuaciones Locales</string>

    <string name="codes">Códigos</string>
    <string name="digital_systems">Digitales</string>
    <string name="network">Redes</string>
    <string name="menu_network_layer">Capa de red</string>

    <string name="menu_hexadecimal">Hexadecimal</string>
    <string name="solution">Solución</string>
    <string name="convert_bin_to_hex">Convierte de binario con 8 bits a hexadecimal</string>
    <string name="convert_hex_to_bin">Convierte de hexadecimal a binario con 8 bits</string>
    <string name="hex_correct">Respuesta correcta</string>
    <string name="hex_wrong">Respuesta incorrecta</string>
    <string name="menu_logical_operations">Logical Operations</string>
    <string name="error_no_clock">Error: este ejercicio no está preparado para jugar</string>
    <string name="LOpregunta">¿Cuál es la solución a esta operación lógica?</string>

    <string name="menu_signed_magnitude">Signed Magnitude</string>


    <!--  Módulo: signo y magnitud -->
    <string name="convert_sign_and_magnitude_to_dec">Convierte de decimal a signo-magnitud con %1$d bits</string>
    <string name="convert_dec_to_sign_and_magnitude">Convierte de signo-magnitud con %1$d bits a decimal</string>

    <!--BINARIO:-->
    <string name="menu_binario">Binario</string>
    <string name="check">Comprobar</string>
    <string name="solution_button">Solución</string>
    <string name="swap">Cambiar</string>
    <string name="convert_bin_to_dec">Convierte de binario a decimal</string>
    <string name="convert_dec_to_bin">Convierte de decimal a binario</string>

    <!--CIDR:-->
    <string name="menu_CIDR">CIDR Mask</string>
    <!-- String layer exercise -->
    <string name="layer_exercise">Capa de red</string>
    <string name="layer_title">Adivina la capa</string>
    <string name="application_layer">Capa de aplicación</string>
    <string name="transport_layer">Capa de transporte</string>
    <string name="internet_layer">Capa de internet</string>
    <string name="link_layer">Capa de enlace</string>
    <string name="button_layer">Comprobar</string>
    <string name="button_layer_solution">Solución</string>
    <string name="question_layer">¿A qué capa pertenece el protocolo </string>

    <string name="p">P</string>
    <string name="or">OR</string>
    <string name="not">NOT</string>
    <string name="soluci_n">SOLUCIÓN</string>
    <string name="xor">XOR</string>
    <string name="nor">NOR</string>
    <string name="and">AND</string>
    <string name="triestado">TRIESTADO</string>
    <string name="nand">NAND</string>
    <string name="c">C</string>
    <string name="a">A</string>
    <string name="e">E</string>
    <string name="puerta_l_gica">Puerta Lógica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_num_hosts">Número de hosts</string>
    <string name="title_num_hosts">Calcula el número de hosts de esta máscara de red</string>
    <string name="title_mask_network">Máscara de red más pequeña que puede tener este número de máquinas</string>


    <string name="twos_complement">Twos Complement</string>
    <string name="convert_tc_to_dec">Convierte de complemento a dos a decimal</string>
    <string name="convert_dec_to_tc">Convierte de decimal a complemento a dos</string>

    <!--Coma flotante-->
    <string name="menu_ejercicioComa">Coma Flotante</string>
    <string name="convert_dec_to_iee">Convierte a formato IEE 754</string>
    <string name="convert_dec_to_iee2">Número decimal</string>
    <string name="convert_iee_to_dec">Convierte de IEE 754 a decimal</string>
    <string name="convert_iee_to_dec2">S    Exp(8 bits)     Mantisa (23 bits)</string>
    <string name="enunciadoCD">Introduce la salida S del circuito digital</string>

    <string name="highscores">Puntuaciones</string>
    <string name="exercise">Ejercicio</string>
</resources>