<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_hexadecimal">

    <fragment
        android:id="@+id/nav_hexadecimal"
        android:name="es.imovil.fcrtrainer.ui.codes.hexadecimal.HexadecimalFragment"
        android:label="@string/menu_hexadecimal"
        tools:layout="@layout/fragment_hexadecimal" />

    <fragment
        android:id="@+id/nav_ejercicioBinario"
        android:name="es.imovil.fcrtrainer.ui.codes.binario.BinarioFragment"
        android:label="@string/menu_binario"
        tools:layout="@layout/fragment_binario" />
    <fragment
        android:id="@+id/nav_NumHosts"
        android:name="es.imovil.fcrtrainer.ui.codes.num_hosts.NumHostsFragment"
        android:label="@string/menu_num_hosts" />
    <fragment
        android:id="@+id/nav_twos_complement"
        android:name="es.imovil.fcrtrainer.ui.codes.twosComplement.TwosComplementFragment"
        android:label="@string/twos_complement"
        tools:layout="@layout/fragment_twos_complement"/>

    <fragment
        android:id="@+id/nav_network_layer"
        android:name="es.imovil.fcrtrainer.ui.codes.NetworkLayer.NetworkLayerFragment"
        android:label="@string/menu_network_layer"
        tools:layout="@layout/fragment_network_layer" />
    <fragment
        android:id="@+id/nav_logic_operations"
        android:name="es.imovil.fcrtrainer.ui.codes.LogicOperations.LogicOperationsFragment"
        android:label="@string/menu_logical_operations" />
    <fragment
        android:id="@+id/nav_logicgate"
        android:name="es.imovil.fcrtrainer.ui.digital.logicgate.LogicgateFragment"
        android:label="@string/puerta_l_gica" />
    <fragment
        android:id="@+id/nav_signed_magnitude"
        android:name="es.imovil.fcrtrainer.ui.codes.signed_magnitude.SignedMagnitudeFragment"
        android:label="@string/menu_signed_magnitude" />
    <fragment
        android:id="@+id/network_mask"
        android:name="es.imovil.fcrtrainer.ui.codes.NetworkMask.NetworkMaskFragment"
        android:label="@string/menu_network_mask" />
    <fragment
        android:id="@+id/CIDR"
        android:name="es.imovil.fcrtrainer.ui.codes.cidr.cidrFragment"
        android:label="@string/menu_CIDR"
        tools:layout="@layout/fragment_cidr" />
    <fragment
        android:id="@+id/nav_ejercicio_Circuitos_Digitales"
        android:name="es.imovil.fcrtrainer.ui.digital.ejercicioCircuitosDigitales.FragmentExerciceCircuitosDigitales"
        android:label="@string/menu_ejercicioCircuitosDigitales"
        tools:layout="@layout/fragment_exercice_circuitos_digitales" />
    <fragment
        android:id="@+id/nav_highscore"
        android:name="es.imovil.fcrtrainer.ui.highscores.HighscoreFragment"
        android:label="@string/highscores"
        tools:layout="@layout/fragment_highscore"/>
</navigation>