<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.networks.NetworkLayerFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/layer_title"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/grouplayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textlayer"
                android:padding="10sp">

                <RadioButton
                    android:id="@+id/application_layer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/application_layer"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/transport_layer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transport_layer"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/internet_layer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/internet_layer"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/link_layer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_layer"
                    android:textSize="20sp" />
            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_layer"/>

            <Button
                android:id="@+id/buttonsolution_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_layer_solution"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>