<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:orientation="vertical">

            <TextSwitcher
                android:id="@+id/exercisetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/hex_title"
                    android:layout_width="413dp"
                    android:layout_height="40dp"
                    android:textSize="16sp"
                    tools:text="Exercise title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Exercise title" />
            </TextSwitcher>

            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:orientation="horizontal">

                <TextSwitcher
                    android:id="@+id/numbertoconvert"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.6">

                    <TextView
                        android:id="@+id/target"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="0001"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="0010"></TextView>
                </TextSwitcher>

                <EditText
                    android:id="@+id/text_view_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:padding="10dp"
                    tools:text="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/checkbutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/check"
                    app:backgroundTint="#535353" />

                <Button
                    android:id="@+id/solution"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/solution"
                    app:backgroundTint="#535353" />

                <Button
                    android:id="@+id/change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:text="@string/swap"
                    app:backgroundTint="#535353" />
            </LinearLayout>

            <TextView
                android:id="@+id/solution_text"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <es.imovil.fcrtrainer.ui.codes.hexadecimal.HexadecimalKeyboardView
                android:id="@+id/keyboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>